Fixed miscellaneous warnings